bug 298923: [Sync View][Apply patch] Merge changes from dev branch back to HEAD

--- a/bundles/org.eclipse.team.ui/plugin.xml
+++ b/bundles/org.eclipse.team.ui/plugin.xml
@@ -577,4 +577,114 @@
          </mapping>
       </transfer>
    </extension>
+   
+   <!-- ******* Apply Patch in Sync View ******** -->
+   <extension
+         point="org.eclipse.team.ui.synchronizeWizards">
+      <wizard
+            class="org.eclipse.team.internal.ui.synchronize.patch.ApplyPatchSynchronizationWizard"
+            description="%PatchSyncWizard_description"
+            icon="icons/full/obj/hunk_obj.gif"
+            id="org.eclipse.team.ui.applyPatchWizard"
+            name="%PatchSyncWizard">
+      </wizard>
+   </extension>
+   <extension
+         point="org.eclipse.team.ui.synchronizeParticipants">
+      <participant
+            class="org.eclipse.team.internal.ui.synchronize.patch.ApplyPatchModelSynchronizeParticipant"
+            icon="icons/full/obj/hunk_obj.gif"
+            id="org.eclipse.team.ui.applyPatchModelParticipant"
+            name="%PatchSyncParticipant"
+            persistent="false">
+      </participant>
+   </extension>
+   <extension
+         id="patchModelProvider"
+         name="%PatchModelProvider"
+         point="org.eclipse.core.resources.modelProviders">
+      <modelProvider
+            class="org.eclipse.team.internal.ui.synchronize.patch.PatchModelProvider"/>
+      <extends-model id="org.eclipse.core.resources.modelProvider"/>
+   </extension>
+      <extension
+            point="org.eclipse.ui.navigator.navigatorContent">
+         <navigatorContent
+               contentProvider="org.eclipse.team.internal.ui.synchronize.patch.PatchSyncContentProvider"
+               icon="icons/full/obj/hunk_obj.gif"
+               id="org.eclipse.team.ui.patchSyncNavigatorContent"
+               labelProvider="org.eclipse.team.internal.ui.synchronize.patch.PatchSyncLabelProvider"
+               name="%PatchNavigatorContent"
+               priority="normal">
+            <enablement>
+               <or>
+                  <instanceof
+                        value="org.eclipse.team.internal.ui.synchronize.patch.PatchWorkspace">
+                  </instanceof>
+                  <instanceof
+                        value="org.eclipse.compare.internal.patch.PatchDiffNode">
+                  </instanceof>
+                  <instanceof
+                        value="org.eclipse.team.internal.ui.synchronize.patch.PatchModelProvider">
+                  </instanceof>
+               </or>
+            </enablement>
+            <actionProvider
+                  class="org.eclipse.team.internal.ui.synchronize.patch.ApplyPatchSynchronizationActionProvider">
+            </actionProvider>
+         </navigatorContent>
+      </extension>
+      <extension
+            point="org.eclipse.core.runtime.adapters">
+         <factory
+               adaptableType="org.eclipse.compare.internal.patch.PatchProjectDiffNode"
+               class="org.eclipse.team.internal.ui.synchronize.patch.AdapterFactory">
+            <adapter
+                  type="org.eclipse.core.resources.mapping.ResourceMapping">
+            </adapter>
+            <adapter
+                  type="org.eclipse.ui.model.IWorkbenchAdapter">
+            </adapter>
+         </factory>
+         <factory
+               adaptableType="org.eclipse.compare.internal.patch.PatchFileDiffNode"
+               class="org.eclipse.team.internal.ui.synchronize.patch.AdapterFactory">
+            <adapter
+                  type="org.eclipse.core.resources.mapping.ResourceMapping">
+            </adapter>
+            <adapter
+                  type="org.eclipse.ui.model.IWorkbenchAdapter">
+            </adapter>
+         </factory>
+         <factory
+               adaptableType="org.eclipse.compare.internal.patch.HunkDiffNode"
+               class="org.eclipse.team.internal.ui.synchronize.patch.AdapterFactory">
+            <adapter
+                  type="org.eclipse.core.resources.mapping.ResourceMapping">
+            </adapter>
+            <adapter
+                  type="org.eclipse.ui.model.IWorkbenchAdapter">
+            </adapter>
+         </factory>
+         <factory
+               adaptableType="org.eclipse.team.internal.ui.synchronize.patch.PatchWorkspace"
+               class="org.eclipse.team.internal.ui.synchronize.patch.AdapterFactory">
+            <adapter
+                  type="org.eclipse.ui.model.IWorkbenchAdapter">
+            </adapter>
+         </factory>
+         <factory
+               adaptableType="org.eclipse.team.internal.ui.synchronize.patch.PatchModelProvider"
+               class="org.eclipse.team.internal.ui.synchronize.patch.AdapterFactory">
+            <adapter type="org.eclipse.team.ui.mapping.ISynchronizationCompareAdapter"/>
+         </factory>         
+      </extension>
+      <extension
+            point="org.eclipse.team.ui.teamContentProviders">
+         <teamContentProvider
+               contentExtensionId="org.eclipse.team.ui.patchSyncNavigatorContent"
+               icon="icons/full/obj/hunk_obj.gif"
+               modelProviderId="org.eclipse.team.ui.patchModelProvider">
+         </teamContentProvider>
+      </extension>	            
 </plugin>
