--- a/org.eclipse.ui.externaltools/External Tools Base/org/eclipse/ui/externaltools/internal/launchConfigurations/ExternalToolsLaunchConfigurationMessages.properties
+++ b/org.eclipse.ui.externaltools/External Tools Base/org/eclipse/ui/externaltools/internal/launchConfigurations/ExternalToolsLaunchConfigurationMessages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2009 IBM Corporation and others.
+# Copyright (c) 2000, 2010 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -42,6 +42,12 @@ ExternalToolsBuildTab_6=Include referenced pro&jects
 ExternalToolsBuildTab_7=Select &Projects:
 ExternalToolsBuildTab_8=Build
 ExternalToolsBuildTab_9=No projects specified
+
+# these messages are present for compatibility with 3.4 - see bug 301183
+ExternalToolsUtil_Location_not_specified_by__0__1=Location not specified by {0}
+ExternalToolsUtil_invalidLocation__0_ = The file does not exist for the external tool named {0}.
+ExternalToolsUtil_invalidDirectory__0_ = The working directory {0} does not exist for the external tool named {1}.
+# end 
 
 ExternalToolsBuilderTab_Run_this_builder_for__1=Run the builder:
 ExternalToolsBuilderTab__Full_builds_2=A&fter a \"Clean\"
