Bug 295122: java.lang.IllegalArgumentException: Illegal pattern character 'j'

--- a/org.eclipse.ltk.ui.refactoring/src/org/eclipse/ltk/internal/ui/refactoring/RefactoringUIMessages.properties
+++ b/org.eclipse.ltk.ui.refactoring/src/org/eclipse/ltk/internal/ui/refactoring/RefactoringUIMessages.properties
@@ -103,8 +103,8 @@ RefactoringHistoryWizard_preparing_refactorings=Preparing refactorings...
 RefactoringHistoryWizard_one_refactoring_undone=There is one refactoring which has been performed.
 RefactoringHistoryWizard_undo_message_explanation=\n\nCanceling this wizard will undo all refactorings to prevent your workspace from being in an inconsistent state.
 
-## These properties are date format patterns for the en_US locale, as defined in DateFormatSymbols.
-## Do *not* localize the characters. If necessary, you can change the repetition count or the order of tokens.
+## These properties are date format patterns for the en_US locale.
+## Do *not* localize the characters. These strings must stay valid com.ibm.icu.text.SimpleDateFormat patterns.
 RefactoringHistoryLabelProvider_this_week_format=w
 RefactoringHistoryLabelProvider_last_week_format=w
 RefactoringHistoryLabelProvider_this_month_format2=MMMM yyyy
