Bug 301695 -  [UI] Fix compatibility issues with the model

--- a/bundles/org.eclipse.e4.ui.model.workbench.edit/plugin.properties
+++ b/bundles/org.eclipse.e4.ui.model.workbench.edit/plugin.properties
@@ -150,3 +150,9 @@ _UI_SideValue_Top_literal = Top
 _UI_SideValue_Bottom_literal = Bottom
 _UI_SideValue_Left_literal = Left
 _UI_SideValue_Right_literal = Right
+_UI_StringToStringMap_type = String To String Map
+_UI_StringToStringMap_key_feature = Key
+_UI_StringToStringMap_value_feature = Value
+_UI_ApplicationElement_tags_feature = Tags
+_UI_Context_properties_feature = Properties
+_UI_ElementContainer_selectedElement_feature = Selected Element
