Fix for bug 301834 - Show heap status in preferences does not have filter keyword

--- a/bundles/org.eclipse.ui.ide/plugin.properties
+++ b/bundles/org.eclipse.ui.ide/plugin.properties
@@ -205,7 +205,7 @@ KeyBindingActionSet.showKeyAssist.label = &Key Assist...
 PreferenceKeywords.Editing = editing
 PreferenceKeywords.Appearance = appearance
 PreferenceKeywords.ColorLabels = color label
-PreferenceKeywords.General = click background
+PreferenceKeywords.General = click background heap
 PreferenceKeywords.Themes = themes
 PreferenceKeywords.AppearancePage = presentation
 PreferenceKeywords.Tabs = tab
