Bug 227252  [Help] Enhancement: Remote Assistance: Add HTTPS support

--- a/org.eclipse.help.base/preferences.ini
+++ b/org.eclipse.help.base/preferences.ini
@@ -171,6 +171,7 @@ remoteHelpOn=false
 remoteHelpName=
 remoteHelpHost=
 remoteHelpPath=
+remoteHelpProtocol=
 remoteHelpUseDefaultPort=
 remoteHelpPort=
 remoteHelpICEnabled=
