Bug 301123 - [breakpoints] Breakpoints view's detail pane must not resize automatically

--- a/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/views/variables/details/DetailMessages.properties
+++ b/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/views/variables/details/DetailMessages.properties
@@ -26,3 +26,5 @@ DetailPaneProxy_0=Problem displaying detail pane, see log for details.
 DetailPaneProxy_1=No details to display for the current selection.
 DetailPaneProxy_2=The detail pane with ID {0} did not create and return a control.
 DetailPaneProxy_3=Could not create the detail pane with ID {0}
+MessageDetailPane_0=Message Detail Pane
+MessageDetailPane_1=Displays a message
