Bug 225036 -  [GlobalActions] Expand All / Collapse All global retargetable actions

--- a/bundles/org.eclipse.ui/plugin.properties
+++ b/bundles/org.eclipse.ui/plugin.properties
@@ -336,6 +336,8 @@ PropertyPage.workingSets.name = Working Set Contents
 
 command.collapseAll.description = Collapse the current tree
 command.collapseAll.name = Collapse All
+command.expandAll.description = Expand the current tree
+command.expandAll.name = Expand All
 command.quickMenu.name = Open Quick Menu
 command.quickMenu.uri.name = Location URI
 command.showIn.name = Show In
