Bug 76005  [Help] Ability for users to filter what they see in the help system navigation acc to some criteria (all help modes)

--- a/org.eclipse.help.webapp/src/org/eclipse/help/internal/webapp/WebappResources.properties
+++ b/org.eclipse.help.webapp/src/org/eclipse/help/internal/webapp/WebappResources.properties
@@ -191,3 +191,9 @@ noConnection=The maximum capacity for active connections to the server has been 
 ioException=An error occured during content retrieval.\n
 alert=Alert 
 error=Error
+
+#criteria
+Uncategorized=Uncategorized
+criterionClosed=Criterion closed
+criterionOpen=Criterion open
+Criteria=Criteria
