--- a/org.eclipse.help/preferences.ini
+++ b/org.eclipse.help/preferences.ini
@@ -4,3 +4,10 @@
 # as /pluginId/path/to/toc.xml. This option is deprecated, 
 # use org.eclipse.help.base.HELP_DATA instead
 baseTOCS= 
+
+# Filtering by criteria
+# Set true to enable criteria filtering, otherwise set false
+enableCriteria=false
+
+# List all the supported criteria names, separated by comma 
+supportedCriteria= 
