Bug 300664 -  [GlobalActions] Make 'Build All' retargetable

--- a/bundles/org.eclipse.ui.ide/plugin.xml
+++ b/bundles/org.eclipse.ui.ide/plugin.xml
@@ -827,6 +827,7 @@
             name="%command.buildAll.name"
             description="%command.buildAll.description"
             categoryId="org.eclipse.ui.category.project"
+            defaultHandler="org.eclipse.ui.internal.ide.handlers.BuildAllProjectsHandler"
             id="org.eclipse.ui.project.buildAll">
       </command>
       <command
