--- a/org.eclipse.debug.ui/plugin.xml
+++ b/org.eclipse.debug.ui/plugin.xml
@@ -2903,5 +2903,21 @@ M4 = Platform-specific fourth key
          </colorOverride>
       </theme>
    </extension>
+   <extension
+         point="org.eclipse.ui.handlers">
+      <handler
+            class="org.eclipse.debug.internal.ui.views.launch.TerminateAndRemoveHandler"
+            commandId="org.eclipse.ui.edit.delete">
+         <activeWhen>
+            <iterate
+                  ifEmpty="false"
+                  operator="and">
+               <adapt
+                     type="org.eclipse.debug.core.model.ITerminate">
+               </adapt>
+            </iterate>
+         </activeWhen>
+      </handler>
+   </extension>
 
 </plugin>
