Bug 223475  [Webapp] Support filtering in TOC and index

--- a/org.eclipse.help.base/src/org/eclipse/help/internal/base/HelpBaseResources.properties
+++ b/org.eclipse.help.base/src/org/eclipse/help/internal/base/HelpBaseResources.properties
@@ -52,3 +52,5 @@ HelpIndexBuilder_cannotCreateDest=Cannot create destination index directory
 HelpIndexBuilder_errorExtractingId=Error extracting plug-in identifier.
 PreferenceNameDefault=Name
 HelpSearch_QueryTooComplex=Query too complex
+EnabledTopicFilterName=Hide topics for capabilities that are not enabled
+SearchScopeFilterName=Hide topics not in active search scope
