--- a/org.eclipse.help.webapp/src/org/eclipse/help/internal/webapp/WebappResources.properties
+++ b/org.eclipse.help.webapp/src/org/eclipse/help/internal/webapp/WebappResources.properties
@@ -15,6 +15,7 @@ Content=Contents
 Links=Links
 Bookshelf=Table of Contents
 show_all=Show All Topics
+filter=Filter
 show_categories=Show result categories
 show_descriptions=Show result descriptions
 Toggle=Toggle Navigation
@@ -191,6 +192,10 @@ noConnection=The maximum capacity for active connections to the server has been 
 ioException=An error occured during content retrieval.\n
 alert=Alert 
 error=Error
+
+# Filterpage
+filterTitle=Select Filters
+filterHeader=Show only topics which satisfy all checked filters. If no filters are checked all topics will be displayed.
 
 #criteria
 Uncategorized=Uncategorized
