End error message with '.'.

--- a/org.eclipse.search/search/org/eclipse/search/internal/ui/SearchMessages.properties
+++ b/org.eclipse.search/search/org/eclipse/search/internal/ui/SearchMessages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2009 IBM Corporation and others.
+# Copyright (c) 2000, 2010 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -54,7 +54,7 @@ SearchDialog_error_pageCreationFailed=The creation of the page ''{0}'' failed.
 SearchPlugin_internal_error= Internal Error
 
 Search_Error_search_title= Search Error
-Search_Error_search_message= An error occurred during the search operation
+Search_Error_search_message= An error occurred during the search operation.
 
 Search_Error_setDescription_title= Search Error
 Search_Error_setDescription_message= Cannot save workspace description
@@ -63,21 +63,21 @@ Search_Error_openResultView_title= Search Error
 Search_Error_openResultView_message= Could not open the search results view
 
 Search_Error_deleteMarkers_title= Search Error
-Search_Error_deleteMarkers_message= An error occurred while deleting search markers
+Search_Error_deleteMarkers_message= An error occurred while deleting search markers.
 
 Search_Error_createMarker_title= Search Error
 Search_Error_createMarker_message= Could not create a search marker
 
 Search_Error_markerAttributeAccess_title= Search Error
-Search_Error_markerAttributeAccess_message= An error occurred while accessing a marker attribute
+Search_Error_markerAttributeAccess_message= An error occurred while accessing a marker attribute.
 
 Search_Error_switchSearch_title= Search Error
-Search_Error_switchSearch_message= An error occurred while switching to a previous search result
+Search_Error_switchSearch_message= An error occurred while switching to a previous search result.
 
 Search_Error_createSearchPage_title=Search Dialog Problem
 Search_Error_createSearchPage_message=An error occurred while creating the search page ''{0}''.
 Search_Error_createSorter_title= Search Error
-Search_Error_createSorter_message= An error occurred while creating a sorter
+Search_Error_createSorter_message= An error occurred while creating a sorter.
 
 SearchPage_containingText_text= Containing &text:
 SearchPage_containingText_hint= (* = any string, ? = any character, \\ = escape for literals: * ? \\)
