Bug 298671 -  Implement enough compatibility to bring up a simple view Plugins can supply a model extension class to do java processing

--- a/bundles/org.eclipse.e4.ui.model.workbench.edit/plugin.properties
+++ b/bundles/org.eclipse.e4.ui.model.workbench.edit/plugin.properties
@@ -156,3 +156,4 @@ _UI_StringToStringMap_value_feature = Value
 _UI_ApplicationElement_tags_feature = Tags
 _UI_Context_properties_feature = Properties
 _UI_ElementContainer_selectedElement_feature = Selected Element
+_UI_ModelComponent_processor_feature = Processor
