--- a/org.eclipse.ui.editors/plugin.properties
+++ b/org.eclipse.ui.editors/plugin.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2009 IBM Corporation and others.
+# Copyright (c) 2000, 2010 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -110,6 +110,9 @@ command.revisions.idToggle.description = Toggles the display of the revision id
 
 command.showChangeRulerInformation.name = Show Quick Diff Ruler Tooltip
 command.showChangeRulerInformation.description = Displays quick diff or revision information for the caret line in a focused hover
+
+command.showRulerAnnotationInformation.name = Show Ruler Annotation Tooltip
+command.showRulerAnnotationInformation.description = Displays annotation information for the caret line in a focused hover
 
 conversionActionSet.label= Convert Line Delimiters
 conversionSubMenu.label= Con&vert Line Delimiters To
