--- a/org.eclipse.ui.editors/src/org/eclipse/ui/texteditor/ConstructedTextEditorMessages.properties
+++ b/org.eclipse.ui.editors/src/org/eclipse/ui/texteditor/ConstructedTextEditorMessages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2009 IBM Corporation and others.
+# Copyright (c) 2000, 2010 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -109,3 +109,8 @@ Editor.ShowChangeRulerInformation.label= Show Quick Diff Ruler Tooltip
 Editor.ShowChangeRulerInformation.tooltip= Show Quick Diff Ruler Tooltip
 Editor.ShowChangeRulerInformation.image=
 Editor.ShowChangeRulerInformation.description= Displays change information for the caret line in a focused hover
+
+Editor.ShowRulerAnnotationInformation.label= Show Ruler Annotation Tooltip
+Editor.ShowRulerAnnotationInformation.tooltip= Show Ruler Annotation Tooltip
+Editor.ShowRulerAnnotationInformation.image=
+Editor.ShowRulerAnnotationInformation.description= Displays annotation information for the caret line in a focused hover
