Bug 303970 -  [Webapp] Always filter by search scope

--- a/org.eclipse.help.webapp/src/org/eclipse/help/internal/webapp/WebappResources.properties
+++ b/org.eclipse.help.webapp/src/org/eclipse/help/internal/webapp/WebappResources.properties
@@ -84,24 +84,24 @@ bookmarks=Bookmarks
 Views=Navigation Views
 noLiveHelp=Active help is not enabled in your installation.
 noLiveHelpInInfocenter=You must run help locally to perform "active help" actions.
-cookieSaveFailed=Saving search scope failed.  Please reduce search scope definitions.
+cookieSaveFailed=Saving scope failed.  Please reduce scope definitions.
 CookieUtil.tooManyCookiesNeeded=Too may cookies required to store data.
 cookiesRequired=This feature requires cookies to be enabled in your browser.
 
 All=All topics
-selectAll=Search &all topics
-selectWorkingSet=Search only the following &topics:
-SelectWorkingSetTitle=Select Search Scope
+selectAll=Show &all topics
+selectWorkingSet=Show only the following &topics:
+SelectWorkingSetTitle=Select Scope
 NewWorkingSetButton=&New...
 EditWorkingSetButton=&Edit...
 RemoveWorkingSetButton=&Remove
 OK=OK
-NewWorkingSet=New Search List
-EditWorkingSet=Edit Search List
+NewWorkingSet=New Scope
+EditWorkingSet=Edit Scope
 WorkingSetName=List &name:
 WorkingSetContent=Topics to search
-Scope=Search scope:
-ScopeTooltip=Select Search Scope
+Scope=Scope:
+ScopeTooltip=Select Scope
 DefaultScopeName=scope
 
 #Confirm Show All Topics dialog
