Bug 301504 - Variable 'WORKSPACE_PARENT_LOC' wrong

--- a/bundles/org.eclipse.core.resources/plugin.xml
+++ b/bundles/org.eclipse.core.resources/plugin.xml
@@ -223,7 +223,7 @@
       </variableResolver>
       <variableResolver
             class="org.eclipse.core.internal.resources.projectvariables.WorkspaceParentLocationVariableResolver"
-            name="WORKSPACE_PARENT_LOC">
+            name="PARENT_LOC">
       </variableResolver>
    </extension>
    <extension
