Minor fixes to changes to always filter by scope

--- a/org.eclipse.help.webapp/src/org/eclipse/help/internal/webapp/WebappResources.properties
+++ b/org.eclipse.help.webapp/src/org/eclipse/help/internal/webapp/WebappResources.properties
@@ -83,7 +83,7 @@ bookmarks=Bookmarks
 
 Views=Navigation Views
 noLiveHelp=Active help is not enabled in your installation.
-noLiveHelpInInfocenter=You must run help locally to perform "active help" actions.
+noLieHelpInInfocenter=You must run help locally to perform "active help" actions.
 cookieSaveFailed=Saving scope failed.  Please reduce scope definitions.
 CookieUtil.tooManyCookiesNeeded=Too may cookies required to store data.
 cookiesRequired=This feature requires cookies to be enabled in your browser.
@@ -99,7 +99,7 @@ OK=OK
 NewWorkingSet=New Scope
 EditWorkingSet=Edit Scope
 WorkingSetName=List &name:
-WorkingSetContent=Topics to search
+WorkingSetContent=Topics
 Scope=Scope:
 ScopeTooltip=Select Scope
 DefaultScopeName=scope
