--- a/bundles/org.eclipse.team.cvs.ui/plugin.properties
+++ b/bundles/org.eclipse.team.cvs.ui/plugin.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2009 IBM Corporation and others.
+# Copyright (c) 2000, 2010 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -249,7 +249,7 @@ IgnoredResourceForegroundColor.description=This color is used for the foreground
 IgnoredResourceBackgroundColor.label=Ignored Resource (Background)
 IgnoredResourceBackgroundColor.description=This color is used for the background color for resources that are ignored from CVS.
 CVSHistoryCategory.label=CVS History Page Categories (Foreground)
-CVSHistoryCategory.description=This color is used for the foreground color for all categories diplayed for CVS resources in the history view.
+CVSHistoryCategory.description=This color is used for the foreground color for all categories displayed for CVS resources in the history view.
 
 PreferenceKeywords.CVS=cvs team share timeout connection
 PreferenceKeywords.Annotate=cvs team annotate
